--- a/pkgs/shells/cfg/alacritty.yml
+++ b/pkgs/shells/cfg/alacritty.yml
@@ -151,7 +151,7 @@ font:
   #
   # This is a global setting and will require a log out or restart to take
   # effect.
-  use_thin_strokes: true
+  #use_thin_strokes: true
 
 debug: 
   # Display the time it takes to redraw each frame.
@@ -410,7 +410,7 @@ live_config_reload: true
 enable_experimental_conpty_backend: false
 
 # Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: true
+#alt_send_esc: true
 
 # Key bindings
 #
